Some cleanup, update readme

--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>DubtrackUtils</groupId>
+  <groupId>me.pugabear</groupId>
   <artifactId>DubtrackUtils</artifactId>
   <version>1.0</version>
   <build>
@@ -38,7 +38,7 @@
         <configuration>
           <artifactSet>
             <includes>
-              <include>dubtrack:dubtrack4j:*:*</include>
+              <include>io.sponges:dubtrack4j:*:*</include>
             </includes>
           </artifactSet>
         </configuration>
@@ -85,7 +85,7 @@
     </dependency>
     <!-- Dubtrack4J -->
     <dependency>
-      <groupId>dubtrack</groupId>
+      <groupId>io.sponges</groupId>
       <artifactId>dubtrack4j</artifactId>
       <version>1.06-SNAPSHOT</version>
     </dependency>
