--- a/pom.xml
+++ b/pom.xml
@@ -85,5 +85,12 @@
       <artifactId>dubtrack4j</artifactId>
       <version>1.06-SNAPSHOT</version>
     </dependency>
+    <!-- PurpleIRC -->
+    <dependency>
+      <groupId>com.cnaude</groupId>
+      <artifactId>PurpleIRC</artifactId>
+      <version>2.1.14-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 </project>
