--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
           <artifactSet>
             <includes>
               <include>io.sponges:dubtrack4j:*:*</include>
+              <include>org.unbescape:unbescape:*:*</include>
             </includes>
           </artifactSet>
         </configuration>
@@ -91,6 +92,12 @@
       <artifactId>PurpleIRC</artifactId>
       <version>2.1.14-SNAPSHOT</version>
       <scope>provided</scope>
+    </dependency>
+    <!-- unbescape - Unescaping HTML characters -->
+    <dependency>
+      <groupId>org.unbescape</groupId>
+      <artifactId>unbescape</artifactId>
+      <version>1.1.4.RELEASE</version>
     </dependency>
   </dependencies>
 </project>
