--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: DubtrackUtils
 main: me.pugabear.DubtrackUtils.DubtrackUtils
 author: PugaBear
 version: 1.0
+softdepend: [PurpleIRC, DiscordSRV]
 commands:
   dubtrack:
     description: Dubtrack command
