--- a/pom.xml
+++ b/pom.xml
@@ -69,8 +69,7 @@
     <repository>
       <id>Scarsz-Jenkins</id>
       <url>http://scarsz.tech:8080/plugin/repository/everything/</url>
-    </repository>
-
+    </repository> 
   </repositories>
   <dependencies>
     <!--Spigot API-->
@@ -99,12 +98,13 @@
       <version>2.1.14-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
+    <!-- DiscordSRV --> 
     <dependency>
-      <groupId>com.scarsz.discordsrv</groupId>
+      <groupId>github.scarsz.discordsrv</groupId>
       <artifactId>DiscordSRV</artifactId>
       <version>13.6</version>
       <scope>provided</scope>
-    </dependency>
+    </dependency> 
     <!-- unbescape - Unescaping HTML characters -->
     <dependency>
       <groupId>org.unbescape</groupId>
